--- a/Cheatsheet.ipynb
+++ b/Cheatsheet.ipynb
@@ -1,17 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Variabler\n",
-    "#Variabler är behållare som innehåller värden\n",
+    "# Variabler\n",
     "\n",
-    "#I python är allt som inte är ett nyckelord och är utan \"\"-tecken en variabel\n",
+    "Variabler är behållare som innehåller värden\n",
     "\n",
-    "#Vi initialiserar (skapar) variabler genom tilldelningsoperatorn =\n"
+    "I python är allt som inte är ett nyckelord och är utan \"\"-tecken en variabel\n",
+    "\n",
+    "Vi initialiserar (skapar) variabler genom tilldelningsoperatorn =\n"
    ]
   },
   {
@@ -51,20 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nLång text\\npå flera rader\\n'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Datatyper\n",
     "\n",
@@ -118,7 +106,58 @@
     "\n",
     "#Dictionaries (ordböcker)\n",
     "\n",
-    "#Kollar "
+    "#Jämför en nyckel (en sträng eller ett nummer) som du ger in mot en lista av nycklar, och returnerar värdet.\n",
+    "\n",
+    "#Deklareras somkommaseparerade nyckel:värde innanför {}\n",
+    "\n",
+    "#Exempel:\n",
+    "\n",
+    "primtal = {\n",
+    "    1:False,\n",
+    "    2:True,\n",
+    "    3:True,\n",
+    "    4:False,\n",
+    "    5:True,\n",
+    "    6:False,\n",
+    "    7:True,\n",
+    "    8:False,\n",
+    "    9:False,\n",
+    "    10:False\n",
+    "}\n",
+    "\n",
+    "djur = {\n",
+    "    \"hund\":\"Människans bästa vän\",\n",
+    "    \"katt\":\"Roliga på internet\",\n",
+    "    \"orm\":\"Farlig\"\n",
+    "}\n",
+    "\n",
+    "#Vi hämtar värden med hjälp av nyckeln\n",
+    "\n",
+    "primtal[3]#True\n",
+    "\n",
+    "djur[\"hund\"]#\"Människans bästa vän\"\n",
+    "\n",
+    "#Återigen kan vi ha hur komplicerade strukturer som helst\n",
+    "\n",
+    "ställen={\n",
+    "    \"Europa\":{\n",
+    "        \"Population\":741447158,\n",
+    "        \"Yta\":10180000,#km^2\n",
+    "        \"Länder\":[\"Finland\",\"Sverige\",\"Danmark\",\"Norge\",\"Tyskland\",\"Frankrike\",\"Storbritannien\",\"Belgien\",\"Schweiz\",\"Nederländerna\"]\n",
+    "    },\n",
+    "    \"Afrika\":{\n",
+    "        \"Population\":1225080510,\n",
+    "        \"Yta\":30370000,#km^2,\n",
+    "        \"Länder\":[\"Etiopien\",\"Ghana\",\"Egypten\",\"Elfenbenskusten\",\"Kongo\",\"Sydafrika\",\"Botswana\",\"Namibien\"]\n",
+    "    },\n",
+    "    \"Nordamerika\":{\n",
+    "        \"Population\":579024000,\n",
+    "        \"Yta\":24709000,\n",
+    "        \"Länder\":[\"Förenta staterna\",\"Kanada\",\"Mexico\",\"Kuba\",\"Haiti\",\"Jamaica\",\"Barbados\",\"Nicaragua\"]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "#Obs! Ta inte ovan som en geografisk sanning, det fattas många länder"
    ]
   },
   {
@@ -157,6 +196,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Specialoperatorer\n",
+    "\n",
+    "a = a+1\n",
+    "\n",
+    "a +=1\n",
+    "\n",
+    "a = a**2\n",
+    "\n",
+    "a **=2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -181,40 +237,51 @@
     "#Boolska operatorer\n",
     "#kombinerar sanningsvärden\n",
     "\n",
+    "#and: både ock\n",
+    "\n",
     "1 < 2 and 1 < 3 #== True .Både 1 < 2 och 1 < 3 måste vara sanna\n",
     "\n",
-    "1 < 2 or 2 < 1  #== True . Nåndera av 1 < 2 eller 2 < 1 måste vara sann"
+    "#or: antingen eller\n",
+    "\n",
+    "1 < 2 or 2 < 1  #== True . Nåndera av 1 < 2 eller 2 < 1 måste vara sann\n",
+    "\n",
+    "#not: negation\n",
+    "\n",
+    "not 1 < 2 #Inverterar sanningsvärdet. True blir False, False blir True\n",
+    "\n",
+    "ett_är_minst = (1 < 2 and 1 < 3)\n",
+    "\n",
+    "ett_är_inte_minst = not ett_är_minst"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Block\n",
-    "#Vissa strukturer i python program är block\n",
+    "# Block\n",
     "\n",
-    "#Block är: \n",
+    "Vissa strukturer i python program är block\n",
     "\n",
-    "#if-satser\n",
-    "#if-else-satser\n",
-    "#for-satser\n",
-    "#while-satser\n",
-    "#funktioner\n",
-    "#klasser\n",
+    "Block är: \n",
     "\n",
-    "#Block består av ett huvud och en kropp\n",
+    " - if-satser\n",
+    " - if-else-satser\n",
+    " - for-satser\n",
+    " - while-satser\n",
+    " - funktioner\n",
+    " - klasser\n",
     "\n",
-    "#Huvudet slutar alltid med ett kolon, alltså :\n",
+    "Block består av ett huvud och en kropp\n",
     "\n",
-    "#Kroppen av ett block är indenterat (flyttat in till höger på sidan)\n",
+    "Huvudet börjar med en sträng som identifierar blockets typ, slutar alltid med ett kolon, alltså :\n",
+    "\n",
+    "Kroppen av ett block är indenterat (flyttat in till höger på sidan)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -227,9 +294,9 @@
     }
    ],
    "source": [
-    "#Ifblock\n",
+    "#If-block\n",
     "a = 3\n",
-    "#Ifblocket består av ett uttryck i huvudet som evalueras till sant eller falskt\n",
+    "#If-blocket består av ett uttryck i huvudet som evalueras till sant eller falskt\n",
     "\n",
     "\n",
     "if a > 2:\n",
@@ -237,12 +304,214 @@
     "    \n",
     "#If-else-sats\n",
     "\n",
-    "a = 1\n",
+    "a = 0\n",
     "\n",
     "if a > 2:\n",
     "    print(\"Hej?\")\n",
+    "elif a >0:\n",
+    "    print(\"Hej maybe\")\n",
     "else:\n",
     "    print(\"Hejdå\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loopar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "frukt_lista\n",
+      "banan är en frukt\n",
+      "äppel är en frukt\n",
+      "citron är en frukt\n",
+      "\n",
+      "frukt_dict\n",
+      "banan är en söt frukt\n",
+      "äppel är en söt frukt\n",
+      "citron är en sur frukt\n",
+      "\n",
+      "range(5)\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "\n",
+      "range(2,5)\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "#For-loopar\n",
+    "#Med for-block kan loopa genom iteratorer\n",
+    "#Exempel på iteratorer är listor\n",
+    "\n",
+    "frukt_lista= [\"banan\",\"äppel\",\"citron\"]\n",
+    "\n",
+    "print(\"\\nfrukt_lista\")\n",
+    "#Forblocket består av:\n",
+    "\n",
+    "#for\n",
+    "#|  loopvariabel (eller variabler)\n",
+    "#|    |   nyckelordet in\n",
+    "#|    |   |  iterator   kolon!\n",
+    "#|  __|__ |  ____|_____ |\n",
+    "for frukt in frukt_lista:\n",
+    "    print(frukt,\"är en frukt\")\n",
+    "    #Inne i loopen innehåller loopvariabeln frukt varje värde i iteratorn, ett värde åt gången\n",
+    "    \n",
+    "#För dicts (ordböcker) kan vi packa upp dicten i två variabler, nyckel & värde\n",
+    "\n",
+    "#Exempel dict\n",
+    "frukt_dict= {\"banan\":\"söt\",\n",
+    "               \"äppel\":\"söt\",\n",
+    "               \"citron\":\"sur\"\n",
+    "              }\n",
+    "\n",
+    "\n",
+    "print(\"\\nfrukt_dict\")\n",
+    "#Då måste vi först kalla på dictens .items() funktion, annars får vi bara nycklarna\n",
+    "\n",
+    "#   första loopvariabeln\n",
+    "#     |   andra loopvariabeln\n",
+    "#   __|__ _|__\n",
+    "for frukt,smak in frukt_dict.items():\n",
+    "    print(frukt,\"är en\",smak,\"frukt\")\n",
+    "    \n",
+    "#Vi kan också enkelt loopa över tal med hjälp av range() funktionen (eller xrange)\n",
+    "\n",
+    "#range(x) ger ett intervall av tal från 0 till x-1\n",
+    "\n",
+    "print(\"\\nrange(5)\")\n",
+    "for i in range(5):\n",
+    "    print(i)\n",
+    "#range(x,y) ger ett intervall av tal från x till y-1\n",
+    "\n",
+    "print(\"\\nrange(2,5)\")\n",
+    "for i in range(2,5):\n",
+    "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#While-loopar\n",
+    "\n",
+    "#while-loopar loopar inte över en iterator, som for loopar, utan de loopar så länge som ett sanninsuttryck är sant\n",
+    "\n",
+    "#en while loop kan bli en oändlig loop om man glömmer att uppdatera variabler som är en del av villkoret\n",
+    "\n",
+    "i = 0\n",
+    "\n",
+    "#while\n",
+    "#|\n",
+    "#|    villkor\n",
+    "#|    __|___\n",
+    "while i < 10:\n",
+    "    print(i)\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loopkontrol\n",
+    "\n",
+    "Det går att ändra på programmeringsflöde inne i en loop:\n",
+    "\n",
+    " - break \n",
+    "  - tar dig ut ur loopen\n",
+    " - continue\n",
+    "  - tar dig till början av loopkroppen, ifall av for-loop avancerar loopvariabeln en framåt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exempel: break\n",
+      "3\n",
+      "7\n",
+      "6\n",
+      "4\n",
+      "4\n",
+      "9\n",
+      "0\n",
+      "9\n",
+      "8\n",
+      "10\n",
+      "6\n",
+      "10\n",
+      "9\n",
+      "9\n",
+      "10\n",
+      "7\n",
+      "3\n",
+      "8\n",
+      "7\n",
+      "1\n",
+      "8\n",
+      "1\n",
+      "7\n",
+      "2\n",
+      "9\n",
+      "8\n",
+      "2\n",
+      "5\n",
+      "\n",
+      "exempel: continue\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"exempel: break\")\n",
+    "import random\n",
+    "while True:\n",
+    "    r = random.randint(0,10)\n",
+    "    print(r)\n",
+    "    if r == 5:\n",
+    "        break\n",
+    "\n",
+    "print(\"\\nexempel: continue\")\n",
+    "#continue exempel\n",
+    "\n",
+    "for i in range(1,10):\n",
+    "    if i == 5:\n",
+    "        continue\n",
+    "    print(i)"
    ]
   },
   {
@@ -253,7 +522,7 @@
    "source": [
     "#Funktionsblock\n",
     "\n",
-    "#Funktionsblocket består av \n",
+    "#Funktionsblocket består av:\n",
     "\n",
     "#def - alla funktionsblock börjar med def \n",
     "#|   funktionens namn - helt som en variabel behöver funktioner ett namn, så att man kan kalla på dem\n",
@@ -282,6 +551,13 @@
     "\n",
     "#Svar kommer att innehålla 7\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
