--- a/Cheatsheet.ipynb
+++ b/Cheatsheet.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +103,16 @@
     "#Kan t.o.m. lägga listor in i listor\n",
     "\n",
     "[[1,2,3],[\"a\",\"b\",\"c\",\"d\"]]\n",
+    "\n",
+    "#Tupler: listor som inte går att ändra\n",
+    "\n",
+    "(1,2,3)\n",
+    "\n",
+    "#En tupel med ett element måste ha ett komma-tecken efter elementet, annars evalueras det bara som ett simpelt värde\n",
+    "\n",
+    "(\"element\",)#tupel som innehåller strängen \"element\"\n",
+    "\n",
+    "(\"element\") #strängen \"element\"\n",
     "\n",
     "#Dictionaries (ordböcker)\n",
     "\n",
@@ -280,8 +290,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# If\n",
+    "\n",
+    "En if-sats är ett flödeskontroll-block, som låter programmet välja vad som ska hända näst.\n",
+    "\n",
+    "Hur programmet väljer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +310,8 @@
      "output_type": "stream",
      "text": [
       "Hej!\n",
-      "Hejdå\n"
+      "solen skiner!\n",
+      "Halleluja, fyra är ett jämnt tal!\n"
      ]
     }
    ],
@@ -302,7 +324,48 @@
     "if a > 2:\n",
     "    print(\"Hej!\")\n",
     "    \n",
-    "#If-else-sats\n",
+    "#Vi kan även genast använda sanningsvärden som vi tidigare beräknat\n",
+    "\n",
+    "solen_skiner = True\n",
+    "\n",
+    "if solen_skiner:\n",
+    "    print(\"solen skiner!\")\n",
+    "\n",
+    "\n",
+    "fyra_är_jämnt = 4 % 2 == 0\n",
+    "\n",
+    "if fyra_är_jämnt:\n",
+    "    print(\"Halleluja, fyra är ett jämnt tal!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Else\n",
+    "\n",
+    "```else``` och ```elif``` kollas efter att ```if```-villkoret har misslyckats (dvs. villkoret har haft ett falskt värde)\n",
+    "\n",
+    "```elif``` kollar dessutom ett villkor till, medan else körs oavsett \n",
+    "\n",
+    "det går att lägga hur många som helst elif efter varann"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hejdå\n"
+     ]
+    }
+   ],
+   "source": [
+    "#If-elif-else-sats\n",
     "\n",
     "a = 0\n",
     "\n",
@@ -515,6 +578,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# While-else\n",
+    "\n",
+    "Vi kan, som med ```if```, lägga en else efter en while-sats.\n",
+    "\n",
+    "Denna kör då villkoret inte är sant, helt som en if-sats.\n",
+    "\n",
+    "I praktiken betyder detta att else-satsen körs efter att resten av loopen har körts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 1\n",
+    "while a < 4:\n",
+    "    a+=1\n",
+    "    print(\"running\")\n",
+    "else:\n",
+    "    print(\"slut\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -550,6 +640,213 @@
     "svar = funktions_namn(3,4) #Sparar returvärdet i svar\n",
     "\n",
     "#Svar kommer att innehålla 7\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running\n",
+      "running\n",
+      "running\n",
+      "slut\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Klasser och objekt\n",
+    "\n",
+    "Ett objekt är en samling av variabler och funktioner som kan hämtas med hjälp av .-operatorn.\n",
+    "\n",
+    "Objekt skapas genom att initialisera en klass. En klass är alltså en bottenplan för ett objekt.\n",
+    "Då ett objekt initialiseras så kopieras klassen in i objektet och sedan körs ```__init__```-funktionen för klassen med objektet som ```self```\n",
+    "\n",
+    "## Klass-deklaration\n",
+    "\n",
+    "En klass är ett block som alla andra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#nyckelordet class\n",
+    "#|    klassens namn \n",
+    "#|    |\n",
+    "#|    |  kolon!\n",
+    "#|    |  |\n",
+    "class Dog:#<-kolon!\n",
+    "    \n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def bark(self):\n",
+    "        print(self.name, \"says: Woof!\")\n",
+    "    \n",
+    "    def info():\n",
+    "        print(\"a dog class\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En klass är lite som ett eget program som du kan köra när du vill. Ett eget \"namespace\" som det kallas.\n",
+    "\n",
+    "Det betyder att alla variabler, funktioner, och andra programmeringsobjekt som har deklarerats inne i Dog finns tillgängliga, men de ligger alltså inne i ```Dog``` namnrummet.\n",
+    "\n",
+    "Alla variabler, funktioner, etc. som vi vanligtvis kallar på ligger i programmeringsfilens eget namnrum, för dem behöver vi inte specifiera namnrum, utan de kan kallas direkt.\n",
+    "\n",
+    "För att komma åt variabler i andra namnrum använder vi ```.```-operatorn:\n",
+    "\n",
+    "    <namnrum>.<namn>\n",
+    "    \n",
+    "Dvs. för att koma åt ```info```-funktionen i ```Dog``` kallar vi på ```Dog```**.**```info()```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a dog class\n"
+     ]
+    }
+   ],
+   "source": [
+    "Dog.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ett objekt är en kopia av Dog-namnrummet, vi skapar objektet genom att *kalla* på klassen Dog, dvs. vi skriver ```Dog()```. När vi kallar på Dog, körs ```Dog.__init__()``` med argumenten:\n",
+    " - ```self```=objektet vi skapar\n",
+    " - resten av argumenten fylls i av vad vi ger in i ```Dog()```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dog=Dog(\"Kalle\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "När vi kallar på funktioner i ett objekts namnrum, lägger python alltid __objektet__ __själv__ in i funktionens första argument, därför brukar det första argumentet kallas ```self```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kalle says: Woof!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Nu kan vi kalla på dog.bark()\n",
+    "dog.bark()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P.g.a. detta kan vi inne i funktionerna komma åt information som är sparat på objektet, i detta fall hundens namn.\n",
+    "\n",
+    "    class Dog:\n",
+    "        ...\n",
+    "        def bark(self):\n",
+    "            print(self.name, \"says: Woof!\") <-- self.name = namnet vi sparade när vi kallade på Dog(), alltså \"Kalle\"\n",
+    "        ...\n",
+    "        \n",
+    "Vi kan också komma åt namnet direkt från dog."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Kalle'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dog.name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Men märk att det inte går att kalla på funktioner som inte har några argument, eftersom python alltid tvingar in objektet själv som första argumentet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "info() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-65ed32909515>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;31m#TypeError\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: info() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
+   "source": [
+    "dog.info()#TypeError"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ärvning\n",
+    "\n",
+    "Det går att ärva klasser för att skapa mer nyanserat beteende i program.\n",
+    "\n"
    ]
   },
   {
