--- a/Cheatsheet.ipynb
+++ b/Cheatsheet.ipynb
@@ -845,8 +845,61 @@
    "source": [
     "# Ärvning\n",
     "\n",
-    "Det går att ärva klasser för att skapa mer nyanserat beteende i program.\n",
-    "\n"
+    "Om det redan finns en klass som gör 90% av vad du vill åstadkomma, men du skulle vilja lägga till lite funktionalitet, hur skall man göra då? Vi kan ärva (eng. inherit) klassen, alltså lägga till nya bitar till den existerande klassen.\n",
+    "\n",
+    "När en klass ärver en annan klass kallas den nya klassen en subklass till den existerande klassen. Vice versa kallas den gamla klassen en superklass till den nya klassen.\n",
+    "\n",
+    "Ärvning betyder att vi skapar en klass som utökar en annan klass. Dvs. klassen innehåller alla variabler och funktioner som superklassen har + alla variabler deklarerade i klassen själv. Vi kan **skriva över** variabler och funktioner från superklassen genom att omdefiniera dem. I följande exempel skriver vi över ```__init__```-funktionen.\n",
+    "\n",
+    "Ärvning sker genom att ge superklassen in som argument till klassen.\n",
+    "\n",
+    "    class Subklass(Superklass):\n",
+    "\n",
+    "Detta betyder också att vi kan använda funktionalitet från superklassen i vår klass, såsom i följande exempel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#             ärver Dog-klassen\n",
+    "#             |\n",
+    "class Collie(Dog):\n",
+    "    def __init__(self):\n",
+    "        Dog.__init__(self,\"Lassie\") #Vi bestämmer att alla Collies har namnet Lassie\n",
+    "#       |\n",
+    "#       Vi kan t.ex. använda __init__ från Dog för att förenkla klassen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lassie says: Woof!\n"
+     ]
+    }
+   ],
+   "source": [
+    "collie = Collie()\n",
+    "collie.bark()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```Collie``` är en subklass till ```Dog```, som skiljer sig från ```Dog``` i att vi har hårdkodat namnet \"Lassie\" till den, annars fungerar ```Collie``` exakt som ```Dog```.\n",
+    "\n",
+    "Eftersom vi skrev om ```__init__``` för ```Collie``` så att den endast tar in ```self```-argumentet kallar vi på ```Collie``` utan argument.\n",
+    "\n",
+    "Inne i ```__init__``` kallar vi på ```Dog.__init__``` för att skapa en Dog som fungerar. Märk att vi nu måste ge in ```self``` som ett argument, eftersom vi kallar på ```__init__``` explicit, som vilken som helst annan funktion (explicit = uttryckligen, det är vi som kallar på ```__init__``` och inte nån magisk bakgrundsmekanism). "
    ]
   },
   {
