--- a/Cheatsheet.ipynb
+++ b/Cheatsheet.ipynb
@@ -860,13 +860,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "#             ärver Dog-klassen\n",
     "#             |\n",
     "class Collie(Dog):\n",
+    "\n",
+    "#       När vi omdefinierar __init__ i Collie skriver vi över den från Dog ärvda __init__-funktionen med den nya funktionen.\n",
+    "#       |\n",
     "    def __init__(self):\n",
     "        Dog.__init__(self,\"Lassie\") #Vi bestämmer att alla Collies har namnet Lassie\n",
     "#       |\n",
