--- a/Cheatsheet.ipynb
+++ b/Cheatsheet.ipynb
@@ -15,16 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Tilldelningsoperatorn =\n",
-    "#Tilldelar (sparar) vänster sida in i variabeln (behållaren) på höger sida\n",
+    "#Tilldelar (sparar) värdet på höger sida in i variabeln (behållaren) på vänster sida\n",
     "#Om variabeln inte finns, skapas den nu\n",
     "\n",
-    "#Höger sida kan vara variabel eller värde\n",
-    "\n",
+    "#Värdet på höger sida kan vara variabel eller ett bokstavligt värde\n",
     "\n",
     "#Ex.\n",
     "\n",
